# CppGame

./: .gitignore  CMakeLists.txt  CppGame.sln
.github/workflows/: build.yml
CppGame/: CppGame.vcxproj  CppGame.vcxproj.filters
CppGame/Debug/: CppGame.exe.recipe  CppGame.ilk  vc142.idb
CppGame/Debug/CppGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CppGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CppGame/Header/: Background.h  GameLoop.h  Scene.h  SceneManager.h  TestScene.h
CppGame/Release/CppGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CppGame.lastbuildstate
CppGame/Source/: Background.cpp  GameLoop.cpp  SceneManager.cpp  TestScene.cpp  main.cpp
CppGame/x64/Debug/: vc142.idb
CppGame/x64/Debug/CppGame.tlog/: CL.command.1.tlog  CL.write.1.tlog  CppGame.lastbuildstate
CppGame/x64/Release/CppGame.tlog/: CL.command.1.tlog  CL.write.1.tlog  CppGame.lastbuildstate
Debug/: vc142.idb
Debug/CppGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CppGame.lastbuildstate
Source/: Background.cpp  GameLoop.cpp  Renderer.cpp  TestScene.h  main.cpp
